--- a/locations.properties
+++ b/locations.properties
@@ -1,6 +1,6 @@
-git.clone.xtext.lib.location=/var/lib/jenkins/workspace/Release_Automation/xtext-lib
-git.clone.xtext.core.location=/var/lib/jenkins/workspace/Release_Automation/xtext-core
-git.clone.xtext.extras.location=/var/lib/jenkins/workspace/Release_Automation/xtext-extras
-git.clone.xtext.idea.location=/var/lib/jenkins/workspace/Release_Automation/xtext-idea
-git.clone.xtext.xtend.location=/var/lib/jenkins/workspace/Release_Automation/xtext-xtend
-git.clone.xtext.web.location=/var/lib/jenkins/workspace/Release_Automation/xtext-web
+git.clone.xtext.lib.location="${workspace}"/xtext-lib
+git.clone.xtext.core.location="${workspace}"/xtext-core
+git.clone.xtext.extras.location="${workspace}"/xtext-extras
+git.clone.xtext.idea.location="${workspace}"/xtext-idea
+git.clone.xtext.xtend.location="${workspace}"/xtext-xtend
+git.clone.xtext.web.location="${workspace}"/xtext-web
