--- a/locations.properties
+++ b/locations.properties
@@ -1,6 +1,6 @@
-git.clone.xtext.lib.location="${workspace}"/xtext-lib
-git.clone.xtext.core.location="${workspace}"/xtext-core
-git.clone.xtext.extras.location="${workspace}"/xtext-extras
-git.clone.xtext.idea.location="${workspace}"/xtext-idea
-git.clone.xtext.xtend.location="${workspace}"/xtext-xtend
-git.clone.xtext.web.location="${workspace}"/xtext-web
+git.clone.xtext.lib.location=/xtext-lib
+git.clone.xtext.core.location=/xtext-core
+git.clone.xtext.extras.location=/xtext-extras
+git.clone.xtext.idea.location=/xtext-idea
+git.clone.xtext.xtend.location=/xtext-xtend
+git.clone.xtext.web.location=/xtext-web
