--- a/locations.properties
+++ b/locations.properties
@@ -1,6 +1,6 @@
-git.clone.xtext.lib.location=/home/hudson/genie.xtext/.jenkins/jobs/releng/jobs/release-prepare/branches/master/workspace/xtext-lib
-git.clone.xtext.core.location=/home/hudson/genie.xtext/.jenkins/jobs/releng/jobs/release-prepare/branches/master/workspace/xtext-core
-git.clone.xtext.extras.location=/home/hudson/genie.xtext/.jenkins/jobs/releng/jobs/release-prepare/branches/master/workspace/xtext-extras
-git.clone.xtext.idea.location=/home/hudson/genie.xtext/.jenkins/jobs/releng/jobs/release-prepare/branches/master/workspace/xtext-idea
-git.clone.xtext.xtend.location=/home/hudson/genie.xtext/.jenkins/jobs/releng/jobs/release-prepare/branches/master/workspace/xtext-xtend
-git.clone.xtext.web.location=/home/hudson/genie.xtext/.jenkins/jobs/releng/jobs/release-prepare/branches/master/workspace/xtext-web
+git.clone.xtext.lib.location=${workspace}/xtext-lib
+git.clone.xtext.core.location=${workspace}/xtext-core
+git.clone.xtext.extras.location=${workspace}/xtext-extras
+git.clone.xtext.idea.location=${workspace}/xtext-idea
+git.clone.xtext.xtend.location=${workspace}/xtext-xtend
+git.clone.xtext.web.location=${workspace}/xtext-web
