Checkout moved to subdir 'build-tools'
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>

--- a/set-xtext-version/Jenkinsfile
+++ b/set-xtext-version/Jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
       steps {
           checkout scm
           script {
-            def gitFunctions    = load 'git_functions.groovy'
+            def gitFunctions    = load 'build-tools/git_functions.groovy'
             
             // Check preconditions
             if (TARGET_BRANCH == 'master') {
@@ -81,15 +81,7 @@ pipeline {
     stage('Modify') {
       steps {
         script {
-          def git = load 'git_functions.groovy'
-          def pom = load 'pom_changes.groovy'
-          
-          dir('xtext-lib') {
-            pom.pomVersionUpdate("$workspace/xtext-lib/releng/org.eclipse.xtext.dev-bom/pom.xml", "${TO_VERSION}-SNAPSHOT")
-            sh "git status"
-          }
-          
-          sh "sh ./fixVersions.sh -f $FROM_VERSION -t $TO_VERSION -b $TO_TYPE"
+          sh "sh build-tools/fixVersions.sh -f $FROM_VERSION -t $TO_VERSION -b $TO_TYPE"
         }
       }
     }
