Write JUnit report from results
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>

--- a/check-versions/Jenkinsfile
+++ b/check-versions/Jenkinsfile
@@ -42,19 +42,51 @@ pipeline {
           def versions      = load 'build-tools/version_functions.groovy'
           def SOURCE_BRANCH = "${params.SOURCE_BRANCH}"
           
-          def doCheck = {currentBuild, dependencyName, currentVersion, latestVersion ->
-            if (currentVersion == latestVersion) {
-              println ("[CHECK] ${dependencyName}: UP-TO-DATE (${latestVersion})")
-            } else {
-              println ("[CHECK] ${dependencyName}: UPDATE AVAILABLE ${currentVersion} -> ${latestVersion}")
-              currentBuild.result = 'UNSTABLE'
+          def writeJUnitReport = {results, fileName ->
+            def numberOfFailures = results.count { result -> result[1]!=result[2] }
+            sh """
+              echo \"<?xml version='1.0' encoding='UTF-8'?>\" > ${fileName}
+              echo \"<testsuites>\" >> ${fileName}
+              echo \"  <testsuite name='version_check' tests='${results.size()}' failures='${numberOfFailures}'>\" >> ${fileName}
+            """
+            results.each {
+              def checkName      = it[0]
+              def currentVersion = it[1]
+              def latestVersion  = it[2]
+              sh "echo \"    <testcase name='${checkName}'>\" >> ${fileName}"
+              if (currentVersion!=latestVersion) {
+                sh "echo \"      <failure message='UPDATE AVAILABLE ${currentVersion} -> ${latestVersion}'></failure>\" >> ${fileName}"
+              }
+              
+              sh "echo \"      <system-out>VERSION IS UP-TO-DATE: ${latestVersion}</system-out>\" >> ${fileName}"
+              sh "echo \"    </testcase>\" >> ${fileName}"
             }
+            sh """
+              echo \"  </testsuite>\" >> ${fileName}
+              echo \"</testsuites>\" >> ${fileName}
+              cat ${fileName}
+              pwd
+              find . 
+            """
           }
           
-          doCheck(currentBuild, 'Eclipse Tycho', versions.getXtextTychoVersion(SOURCE_BRANCH), versions.getLatestArtifactVersion('org.eclipse.tycho','tycho-maven-plugin'))
-          doCheck(currentBuild, 'xtext-gradle-plugin', versions.getXtextGradlePluginVersion(SOURCE_BRANCH), versions.getLatestArtifactVersion('org.xtext','xtext-gradle-plugin'))
-        }
-      }
-    }
+          def results = [] // 0: Check; 1: Current Version used by Xtext; 2: Latest Available Version
+          results.add(['Eclipse Tycho'      , versions.getXtextTychoVersion(SOURCE_BRANCH)       , versions.getLatestArtifactVersion('org.eclipse.tycho','tycho-maven-plugin')])
+          results.add(['Gradle'             , versions.getXtextGradleVersion(SOURCE_BRANCH)      , versions.getLatestReleaseFromGitHubRepository('gradle','gradle')])
+          results.add(['xtext-gradle-plugin', versions.getXtextGradlePluginVersion(SOURCE_BRANCH), versions.getLatestArtifactVersion('org.xtext','xtext-gradle-plugin')])
+          
+          sh "mkdir target"
+          writeJUnitReport(results,"target/report.xml")
+        } // END script
+        
+        step([$class: 'JUnitResultArchiver', testResults: "target/report.xml"])
+      } // END steps
+    } // END stage
   } // stages
+
+  post {
+    always {
+      archiveArtifacts artifacts: 'target/**'
+    }
+  }
 }
