--- a/check-versions/Jenkinsfile
+++ b/check-versions/Jenkinsfile
@@ -75,10 +75,42 @@ pipeline {
           }
           
           def results = [] // 0: Check; 1: Current Version used by Xtext; 2: Latest Available Version
-          results.add(['Eclipse Tycho'          , versions.getXtextTychoVersion(SOURCE_BRANCH)       , versions.getLatestArtifactVersion('org.eclipse.tycho','tycho-maven-plugin')])
-          results.add(['Gradle'                 , versions.getXtextGradleVersion(SOURCE_BRANCH)      , versions.getLatestReleaseFromGitHubRepository('gradle','gradle')])
-          results.add(['Xtext Bootstrap Version', versions.getXtextBootstrapVersion(SOURCE_BRANCH)   , versions.getLatestArtifactVersion('org.eclipse.xtend','xtend-maven-plugin')])
-          results.add(['xtext-gradle-plugin'    , versions.getXtextGradlePluginVersion(SOURCE_BRANCH), versions.getLatestArtifactVersion('org.xtext','xtext-gradle-plugin')])
+          results.add([
+            'Eclipse Tycho',
+            versions.getXtextTychoVersion(SOURCE_BRANCH),
+            versions.getLatestArtifactVersion('org.eclipse.tycho','tycho-maven-plugin')
+          ])
+          results.add([
+            'Gradle',
+            versions.getXtextGradleVersion(SOURCE_BRANCH),
+            versions.getLatestReleaseFromGitHubRepository('gradle','gradle')
+          ])
+          results.add([
+            'Xtext Bootstrap Version',
+            versions.getVersionFromGradleVersions('xtext_bootstrap',SOURCE_BRANCH),
+            versions.getLatestArtifactVersion('org.eclipse.xtend','xtend-maven-plugin')
+          ])
+          results.add([
+            'Spring dependency-management-plugin',
+            versions.getVersionFromGradleVersions('dependency_management_plugin',SOURCE_BRANCH),
+            versions.getLatestArtifactVersion('io.spring.gradle','dependency-management-plugin')
+          ])
+          results.add([
+            'xtext-gradle-plugin',
+            versions.getXtextGradlePluginVersion(SOURCE_BRANCH),
+            versions.getLatestArtifactVersion('org.xtext','xtext-gradle-plugin')
+          ])
+          // CHECK BOM
+          // The version properties in the BOM without the '-version' suffix
+          def bomProperties = ['core.commands','core.contenttype','core.expressions','core.filesystem','core.jobs','core.resources','core.runtime']
+          
+          bomProperties.each {
+            results.add([
+              "org.eclipse.${it}",
+              versions.getVersionFromBOM(it, SOURCE_BRANCH),
+              versions.getLatestArtifactVersion('org.eclipse.platform',"org.eclipse.${it}")
+            ])
+          }
           
           sh "mkdir target" // make sure target directory exists
           writeJUnitReport(results,"target/report.xml")
