--- a/check-versions/Jenkinsfile
+++ b/check-versions/Jenkinsfile
@@ -56,7 +56,7 @@ pipeline {
             results
               .groupBy { it[0] }
               .each { entry -> 
-                def resultsForKey = results.filter{it[0]==entry.key}
+                def resultsForKey = entry.value
                 def numberOfFailures = resultsForKey.count { result -> result[2]!=result[3] }
                 sh """
                   echo \"  <testsuite name='${entry.key}' tests='${resultsForKey.size()}' failures='${numberOfFailures}'>\" >> ${fileName}
@@ -87,12 +87,6 @@ pipeline {
           
           def results = [] // 0: Category(Class), 1: Check; 2: Current Version used by Xtext; 3: Latest Available Version
           results.add([
-            'Maven Plugins',
-            'Eclipse Tycho',
-            versions.getXtextTychoVersion(SOURCE_BRANCH),
-            versions.getLatestArtifactVersion('org.eclipse.tycho','tycho-maven-plugin')
-          ])
-          results.add([
             'Gradle',
             'Gradle',
             versions.getXtextGradleVersion(SOURCE_BRANCH),
@@ -116,11 +110,16 @@ pipeline {
             versions.getXtextGradlePluginVersion(SOURCE_BRANCH),
             versions.getLatestArtifactVersion('org.xtext','xtext-gradle-plugin')
           ])
+          
           // CHECK BOM
           // The version properties in the BOM without the '-version' suffix
-          def bomProperties = ['core.commands','core.contenttype','core.expressions','core.filesystem','core.jobs','core.resources','core.runtime']
-          
-          bomProperties.each {
+          // For Eclipse platform artifact versions there is a common pattern
+          def eclipsePlatformProperties = [
+            'core.commands','core.contenttype','core.expressions','core.filesystem','core.jobs','core.resources','core.runtime',
+            'equinox.app','equinox.common','equinox.preferences','equinox.registry',
+            'osgi','text'
+          ]
+          eclipsePlatformProperties.each {
             results.add([
               'BOM',
               "org.eclipse.${it}",
@@ -128,7 +127,39 @@ pipeline {
               versions.getLatestArtifactVersion('org.eclipse.platform',"org.eclipse.${it}")
             ])
           }
+          // JDT
+          ['jdt.core','jdt.compiler.apt','jdt.compiler.tool'].each {
+            results.add([
+              'BOM',
+              "org.eclipse.${it}",
+              versions.getVersionFromBOM(it, SOURCE_BRANCH),
+              versions.getLatestArtifactVersion('org.eclipse.jdt',"org.eclipse.${it}")
+            ])
+          }
+          results.add([
+            'BOM',
+            'javax.annotation-api',
+            versions.getVersionFromBOM('javax.annotation-api', SOURCE_BRANCH),
+            versions.getLatestArtifactVersion('javax.annotation','javax.annotation-api')
+          ])
           
+          /*
+          results.add([
+            'BOM',
+            'org.eclipse.lsp4j',
+            versions.getVersionFromBOM('org.eclipse.lsp4j', SOURCE_BRANCH),
+            versions.getLatestArtifactVersion('org.eclipse.lsp4j','org.eclipse.lsp4j')
+          ])
+          */
+          
+          // MAVEN PLUGINS
+          results.add([
+            'Maven Plugins',
+            'Eclipse Tycho',
+            versions.getXtextTychoVersion(SOURCE_BRANCH),
+            versions.getLatestArtifactVersion('org.eclipse.tycho','tycho-maven-plugin')
+          ])
+
           sh "mkdir target" // make sure target directory exists
           writeJUnitReport(results,"target/report.xml")
         } // END script
